# python-study

./: README.md
fastapi-mono-repo-poetry/: .gitignore  pyproject.toml
fastapi-mono-repo-poetry/miflow.common/: pyproject.toml
fastapi-mono-repo-poetry/miflow.common/src/miflow/common/: __init__.py
fastapi-mono-repo-poetry/miflow.common/tests/: test_miflow_common.py
fastapi-mono-repo-poetry/miflow.dataservice/: build.sh  pyproject.toml  req.txt
fastapi-mono-repo-poetry/miflow.dataservice/src/miflow/dataservice/: __main__.py  app.py  main.py
fastapi-mono-repo-poetry/miflow.dataservice/tests/: test_miflow_dataservice.py
fastapi-mono-repo-poetry/miflow.util/: pyproject.toml
fastapi-mono-repo-poetry/miflow.util/src/miflow/util/: __init__.py
fastapi-mono-repo-poetry/miflow.util/tests/: test_miflow_util.py
