[tool.poetry]
name = "miflow.util"
version = "0.1.0"
description = ""
authors = ["이준환 <joonhwan.lee@mirero.co.kr>"]
packages = [
    { include = "miflow", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
